--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
-  "name": "weather-api",
+  "name": "~TODO~",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "watch": "tsc -w",
     "dev": "nodemon dist/index.js",
-    "start": "node dist/index.js"
+    "dev2":"nodemon src/index.ts",
+    "start": "node dist/index.js",
+    "start2": "ts-node src/index.ts"
   },
   "keywords": [],
   "author": "",
