--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "start2": "ts-node src/index.ts"
   },
   "keywords": [],
-  "author": "",
+  "author": "YogPanjarale",
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^14.0.27",
