--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "watch": "tsc -w",
-    "dev": "nodemon dist/index.js",
-    "dev2":"nodemon src/index.ts",
+    "dev": "nodemon src/index.ts",
+    "dev2":"nodemon dist/index.js",
     "start": "node dist/index.js",
     "start2": "ts-node src/index.ts"
   },
