--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "watch": "tsc -w",
+    "build": "tsc",
     "dev": "nodemon src/index.ts",
     "dev2":"nodemon dist/index.js",
     "start": "node dist/index.js",
